--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gamepanel",
+  "name": "custom-backpack-viewer",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.3.1",
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -19,18 +20,14 @@
     "next-auth": "^4.23.1",
     "next-auth-steam": "^0.1.5",
     "next-connect": "^1.0.0",
-    "passport": "^0.6.0",
-    "passport-steam": "^1.0.18",
     "postcss": "8.4.29",
+    "prisma": "^5.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.2",
+    "react-toastify": "^9.1.3",
+    "steamidconvert": "^0.2.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
-  },
-  "devDependencies": {
-    "@types/cookie-session": "^2.0.45",
-    "@types/passport": "^1.0.12",
-    "@types/passport-steam": "^1.0.1",
-    "cookie-session": "^2.0.0"
   }
 }
