--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-STEAM_SECRET=
-NEXTAUTH_URL=
-NEXTAUTH_SECRET=
-DATABASE_URL=
+STEAM_SECRET=<steam_web_api_key>
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=<openssl rand -hex 32>
+DATABASE_URL=mysql://user:pass@host:port/db_name
