--- a/package.json
+++ b/package.json
@@ -9,25 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.3.1",
-    "@types/node": "20.6.2",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.15",
-    "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
-    "next-auth": "^4.23.1",
-    "next-auth-steam": "^0.1.5",
+    "@prisma/client": "^6.17.1",
+    "@tailwindcss/postcss": "^4.1.14",
+    "@types/node": "24.8.1",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
+    "autoprefixer": "10.4.21",
+    "eslint": "9.37.0",
+    "eslint-config-next": "15.5.6",
+    "next": "15.5.6",
+    "next-auth": "^4.24.11",
+    "next-auth-steam": "^0.4.0",
     "next-connect": "^1.0.0",
-    "postcss": "8.4.29",
-    "prisma": "^5.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.46.2",
-    "react-toastify": "^9.1.3",
+    "postcss": "8.5.6",
+    "prisma": "^6.17.1",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "react-hook-form": "^7.65.0",
+    "react-toastify": "^11.0.5",
     "steamidconvert": "^0.2.4",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "tailwindcss": "4.1.14",
+    "typescript": "5.9.3",
+    "zod": "^4.1.12"
   }
 }
